crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@changed-platform-subdir.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/tests.rs
assertion_line: 273
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the workspace platform 'extra' uses subdir 'linux-aarch64' but the lock-file was solved with subdir 'linux-64'
