crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@changed-platform-virtual-package.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/tests.rs
assertion_line: 273
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the workspace platform 'extra' declares virtual packages [__cuda=12.0] but the lock-file was solved with [__cuda=11.0]
