crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@conda-extra-not-declared.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/tests.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'linux-64'
    Diagnostic severity: error
    Caused by: the requirement 'my-package *[extras=[baz]]' could not be satisfied (required by '<environment>')
