crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@conditional-dependency-not-locked.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/tests.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'linux-64-cuda'
    Diagnostic severity: error
    Caused by: the requirement 'gpu-package *[when="__cuda>=12"]' could not be satisfied (required by '<environment>')
