crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@mismatch-exclude-newer2.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the locked package 'foobar' has timestamp 2025-11-05T00:00:00Z, which is newer than the environment's exclude-newer cutoff 2025-11-04T00:00:00Z
