crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@mismatch-exclude-newer3.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the lock-file was solved with exclude-newer set to 2023-10-01 00:00:00 UTC, but the environment does not have this option set
